packages/next/build/swc/crates/core/tests/errors/re-export-all-in-page/re-export-all/output.txt
error: Using `export * from '...'` in a page is disallowed. Please use `export { default } from '...'` instead.
Read more: https://nextjs.org/docs/messages/export-all-in-page
 --> $DIR/tests/errors/re-export-all-in-page/re-export-all/input.js:1:1
  |
1 | export * from './other-page'
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

